<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progresbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_atas"
        app:layout_constraintBottom_toTopOf="@+id/bg_bawah"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            style="@style/ParagraphRegularR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/title_email" />

        <RelativeLayout
            android:id="@+id/rlEmailHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edttext"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/ParagraphRegularR"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/title_password" />

        <RelativeLayout
            android:id="@+id/rlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:autofillHints="password"
                android:background="@drawable/custom_edttext"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:contentDescription="@string/title_password"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="17dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_hide_password"
                android:tag="hidden" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvLupaPass"
            style="@style/ParagraphRegularR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13.5dp"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/title_forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/red_dark" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="34dp"
            android:text="@string/title_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_no_account"
                style="@style/ParagraphRegularR"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/btnDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_create_account"
                style="@style/ParagraphRegularR"
                android:layout_marginStart="10dp"
                android:textColor="@color/primary"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/bg_bawah"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bg_bulat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/bg_atas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bg_bulat_atas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>